package classe;
import entite.personnage.Personnage;

public interface Classe {
    void definirCaracsBase(Personnage personnage);
}
